Change cron schedule to run every minute
Updated cron schedule to run every minute instead of every 5 minutes.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Moltbook 24-7 Agent
 on:
   schedule:
-    - cron: '*/5 * * * *'  # TIAP 2 MENIT! JANGAN MANJA LAGI ANJING!
+    - cron: '*/1 * * * *'
   workflow_dispatch:
 
 jobs:
